# jack

./: .gitignore  README.md  pyproject.toml
jack/: __main__.py  config.py  main.py  state.py
jack/audio/: capture.py  encoder.py  recorder.py  silence.py
jack/metadata/: artwork.py  musicbrainz.py
jack/tui/: app.py  app.tcss
jack/tui/screens/: complete.py  flip.py  menu.py  ripping.py  setup.py  test.py
jack/tui/widgets/: vu.py
scripts/: artwork_test.py  capture_test.py  detect_devices.py  encoder_test.py  mb_test.py  ripping_screen_test.py  silence_test.py
tests/fixtures/: mb_release_dsotm_vinyl.json  mb_search_pink_floyd.json
