[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jack"
version = "0.1.0"
description = "TUI vinyl ripper: capture, auto-split, tag, and encode records to FLAC."
readme = { content-type = "text/markdown", text = "Jack — vinyl-to-FLAC TUI ripper." }
requires-python = ">=3.11"
authors = [{ name = "Lee Caine" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "textual>=0.79",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.26",
    "mutagen>=1.47",
    "musicbrainzngs>=0.7.1",
    "requests>=2.31",
    "pillow>=10.2",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
jack = "jack.main:main"

[tool.hatch.build.targets.wheel]
packages = ["jack"]

[tool.ruff]
line-length = 100
target-version = "py311"
